--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "sync-orama": "node ./scripts/orama-search/sync-orama-cloud.mjs",
     "storybook": "cross-env NODE_NO_WARNINGS=1 storybook dev -p 6006 --quiet --no-open",
     "storybook:build": "cross-env NODE_NO_WARNINGS=1 storybook build --quiet --webpack-stats-json",
-    "test:unit": "cross-env NODE_NO_WARNINGS=1 jest",
+    "jest:unit": "cross-env NODE_NO_WARNINGS=1 jest",
+    "jest:unit:watch": "npm run test:unit -- --watch",
+    "test:unit": "node --no-warnings --loader=nodejs-loaders/dev/alias --loader=nodejs-loaders/dev/tsx --loader=nodejs-loaders/testing/css-module --import=./test.loader.mjs --test",
     "test:unit:watch": "npm run test:unit -- --watch",
     "test": "npm run test:unit",
     "prepare": "husky"
@@ -116,6 +118,8 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-junit": "16.0.0",
+    "jsdom": "^24.0.0",
+    "nodejs-loaders": "^1.0.0",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.12",
     "remark-frontmatter": "5.0.0",
